Fix map sometimes not full height on iOS Mobile Safari

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
+  height: 100%;
 }
 
 #app {
